--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@ngrx/store": "18.0.2",
+    "@ngrx/store-devtools": "^18.0.2",
     "angular-toastify": "^1.0.7",
     "jwt-decode": "^4.0.0",
     "ngx-skeleton-loader": "^9.0.0",
